<resources>
    <string name="app_name">转码宝</string>
    <string name="qr_code_system">二维码信息识别系统</string>
    <string name="first_step">点击扫描按钮开始扫</string>
    <string name="second_step">扫描合格证上的二维码</string>
    <string name="third_step">获得转码结果</string>
    <string name="zmsm">转码扫描</string>
    <string name="scan_again">点击此处重新扫描</string>
    <string name="scan_code">扫描二维码</string>
    <string name="transcoding">转码中，请稍后......</string>
    <string name="network_failed">网络连接失败，请检查您的网络设置</string>
    <string name="transcoding_failed">无效的二维码，请重新扫描！</string>
    <string name="transcoding_failed_title">扫描失败</string>

    <string name="certificate_title">合格证</string>
    <string name="certificate_hgbh">产品合格证编号</string>
    <string name="certificate_zsbh">ccc证书编号</string>
    <string name="certificate_state">CCC证书版本号</string>
    <string name="certificate_yxrq">CCC证书发证日期</string>
    <string name="certificate_clzzs">车辆制造商</string>
    <string name="certificate_long">长×宽×高(mm×mm×mm)</string>
    <string name="certificate_width">宽</string>
    <string name="certificate_hight">高</string>
    <string name="certificate_xhlc">续行里程（km）</string>
    <string name="certificate_zczl">整车质量（kg）</string>
    <string name="certificate_zgsjsd">最高设计时速(km/h)</string>
    <string name="certificate_bmwz">车架上整车编码的位置</string>
    <string name="certificate_mpwz">铭牌固定位置</string>
    <string name="certificate_csys">车身颜色</string>
    <string name="certificate_zzrq">制造日期</string>
    <string name="certificate_clwxtp">车辆外形简图</string>
    <string name="certificate_info">二维码信息</string>
    <string name="certificate_result">扫描结果</string>
    <string name="certificate_failed">扫码失败</string>

</resources>
